# mcc-dfc-africa-scraper

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: black.yaml
output/: MCC_DFC_Africa_Master_2026-03-27.xlsx  dfc_active_projects_africa.xlsx  dfc_federal_register_africa.xlsx  dfc_impact_stories.xlsx  dfc_press_releases_africa.xlsx  dfc_sectors_africa.xlsx  mcc_country_pages.xlsx  run_log.txt  usaspending_dfc_africa.xlsx  usaspending_mcc_africa.xlsx  usaspending_mcc_top_recipients.xlsx
raw_data/: dfc_board_notices_raw.xlsx  dfc_raw_download.xlsx  usaspending_dfc_all.xlsx  usaspending_mcc_all.xlsx
scripts/: config.py  consolidate.py  dfc_scraper.py  logger.py  mcc_scraper.py  run_all.py
