[tool.poetry]
package-mode = false
authors = ["The ONE Campaign"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <4.0"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
